test/conformance/chainsaw/cli/apply/apply-exception-with-ns-selector/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: exception
spec:
  policyRefs:
  - name: require-run-as-non-root-user
    kind: ValidatingPolicy
  matchConditions:
  - name: ns-selector
    expression: >-
      has(namespaceObject.metadata.labels) &&
      namespaceObject.metadata.labels['kyverno.tess.io/mutateresource'] == 'false'
