test/conformance/chainsaw/cli/apply/apply-exception-with-ns-selector/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: ns-1
spec:
  containers:
  - name: nginx
    image: nginx:latest
    # Grant necessary permissions using SecurityContext (optional)
    securityContext:
      runAsUser: 0
    resources:
      limits:
        cpu: "1" 
        memory: "1Gi"
