test/conformance/chainsaw/cli/apply/apply-exception-with-ns-selector/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-exception-with-ns-selector
spec:
  concurrent: false
  steps:
  - name: step-01  
    try:  
    - script:  
        content: kubectl create ns ns-1
  - name: step-02
    try:  
    - script:  
        content: kubectl label ns ns-1 kyverno.tess.io/mutateresource=false
  - name: step-03
    try:
    - create:
        file: pod.yaml
  - name: step-04
    try:
    - script:
        content: kyverno apply policy.yaml --exception exception.yaml --cluster --namespace ns-1 --values-file values.yaml
        check:
          (trim_space($stdout)): |-
            Applying 1 policy rule(s) to 1 resource(s) with 1 exception(s)...

            pass: 0, fail: 0, warn: 0, error: 0, skip: 1
